--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ python-jose = "^3.3.0"
 bcrypt = "^4.1.3"
 fastapi = {extras = ["all"], version = "^0.114.2"}
 aiohttp = "^3.10.5"
+minio = "^7.2.8"
+miniopy-async = "^1.21.1"
 
 
 [tool.poetry.group.dev.dependencies]
