--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ fastapi = {extras = ["all"], version = "^0.114.2"}
 aiohttp = "^3.10.5"
 minio = "^7.2.8"
 miniopy-async = "^1.21.1"
+python-multipart = "^0.0.9"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -27,6 +28,7 @@ faker = "^24.1.0"
 ipykernel = "^6.29.3"
 pytest = "^8.1.1"
 icecream = "^2.1.3"
+requests = "^2.32.3"
 
 
 [build-system]
