--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ aiohttp = "^3.10.5"
 minio = "^7.2.8"
 miniopy-async = "^1.21.1"
 python-multipart = "^0.0.9"
+pika = "^1.3.2"
 
 
 [tool.poetry.group.dev.dependencies]
