--- a/dev.env
+++ b/dev.env
@@ -1,7 +1,11 @@
 auth_service_url="http://127.0.0.1:8000/v1/auth"
 is_prod=false
+upload_bucket_name=videos-to-be-converted
 minio_endpoint=localhost:9000
 minio_access_key=1EFiuRwXckhsNJ1lNrIL
 minio_secret_key=Xu275Ld4iYswfrmKuiN9nKnIMjbaxiVs8mF721oj
-upload_bucket_name=videos-to-be-converted
-RABBIT_URL=""
+RABBIT_URL=localhost
+RABBITMQ_USER=rabbit_user
+RABBITMQ_PASS=rabbit_pass
+UPLOAD_ROUTING_KEY=video
+UPLOAD_EXCHANGE=""
