build(K8S): Adding new yaml manifest for k8s deployment and services

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: gateway-converter-deployment
-  namespace: gateway-converter-svc
+  namespace: gateway-converter-ns
 spec:
   selector:
     matchLabels:
