--- a/k8s/certificate.yaml
+++ b/k8s/certificate.yaml
@@ -2,7 +2,7 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: portfile
-  namespace: gateway-converter-svc
+  namespace: gateway-converter-ns
 spec:
   secretName: portfile-tls
   issuerRef:
