--- a/k8s/default-headers.yaml
+++ b/k8s/default-headers.yaml
@@ -2,7 +2,7 @@ apiVersion: traefik.io/v1alpha1
 kind: Middleware
 metadata:
   name: default-headers
-  namespace: gateway-converter-svc
+  namespace: gateway-converter-ns
 spec:
   headers:
     browserXssFilter: true
