--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: password-generator-svc
-  namespace: gateway-converter-svc
+  namespace: gateway-converter-ns
 spec:
   type: LoadBalancer
   loadBalancerIP: 192.168.1.80
