--- a/k8s/default-headers.yaml
+++ b/k8s/default-headers.yaml
@@ -1,8 +1,8 @@
 apiVersion: traefik.io/v1alpha1
 kind: Middleware
 metadata:
-  name: default-headers
-  namespace: gateway-converter-ns
+  name: gateway-default-headers
+  namespace: video-to-audio-converter
 spec:
   headers:
     browserXssFilter: true
