--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: gateway-converter-deployment
-  namespace: gateway-converter-ns
+  namespace: video-to-audio-converter
 spec:
   selector:
     matchLabels:
