--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -2,7 +2,7 @@ apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: gateway-converter-ingress
-  namespace: gateway-converter-ns
+  namespace: video-to-audio-converter
   annotations:
     kubernetes.io/ingress.class: traefik-external
 spec:
