--- a/k8s/secret.yaml
+++ b/k8s/secret.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: gateway-converter-secret
+  namespace: video-to-audio-converter
 stringData:
   PLACEHOLDER: "NONE"
 type: Opaque
