--- a/k8s/configmap.yaml
+++ b/k8s/configmap.yaml
@@ -2,10 +2,10 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: gateway-converter-configmap
-  namespace: gateway-converter-ns
+  namespace: video-to-audio-converter
 data:
-  UPLOAD_ROUTING_KEY: "video"
+  UPLOAD_ROUTING_KEY: "video_converter"
   UPLOAD_EXCHANGE: ""
-  upload_bucket_name: "videos-to-be-converted"
+  upload_bucket_name: "video-to-audio-converter"
   is_prod: "true"
-  auth_service_url: converter_auth_service
+  auth_service_url: "http://auth-converter-svc"
