--- a/k8s/default-headers.yaml
+++ b/k8s/default-headers.yaml
@@ -1,7 +1,8 @@
+---
 apiVersion: traefik.io/v1alpha1
 kind: Middleware
 metadata:
-  name: gateway-default-headers
+  name: gateway-converter-default-headers
   namespace: video-to-audio-converter
 spec:
   headers:
