--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,22 +1,30 @@
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: gateway-converter-deployment
   namespace: video-to-audio-converter
+  labels:
+    app: gateway-converter
 spec:
+  replicas: 2
   selector:
     matchLabels:
       app: gateway-converter
-
-  replicas: 2
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 3
   template:
     metadata:
       labels:
         app: gateway-converter
     spec:
       containers:
-      - name: gateway-converter
-        image: gabzsz/gateway-converter:0.1.0
-        ports:
-        - containerPort: 80
-
+        - name: gateway_converter
+          image: gabzsz/gateway_converter:0.1.0
+          envFrom:
+            - configMapRef:
+                name: gateway-converter-configmap
+            - secretRef:
+                name: gateway-converter-secret
