--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
@@ -12,7 +13,7 @@ spec:
     - match: Host(`www.gateway-converter.portfile.dev`)
       kind: Rule
       services:
-        - name: password-generator-svc
+        - name: gateway-converter-svc
           port: 80
     - match: Host(`gateway-converter.portfile.dev`)
       kind: Rule
