--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: password-generator-svc
+  name: gateway-converter-svc
   namespace: video-to-audio-converter
 spec:
   type: LoadBalancer
-  loadBalancerIP: 192.168.1.80
+  loadBalancerIP: 192.168.1.87
   selector:
     app: gateway-converter
   ports:
