--- a/dev.env
+++ b/dev.env
@@ -1,4 +1,4 @@
-auth_service_url="http://127.0.0.1:8000/v1/auth"
+AUTH_SERVICE_URL="http://127.0.0.1:8000/v1/auth"
 is_prod=false
 upload_bucket_name="video-to-audio-converter"
 
